# baker

./: .gitignore  LICENSE  README.md  aidl_interface.bzl  droiddoc.go  droidstubs.go  setup.py  system_modules.go
.github/workflows/: build-test-reusable.yml  run_tests.yml
baker/: cmake_converter.py  hints.ninja  main.py
baker/blueprint/: ast.py  blueprint.g4  parser.py  visitor.py
baker/definitions/: __init__.py  aconfig_declarations.py  aconfig_modules.py  aidl_interface.py  art_cc_library.py  assignment.py  cc_aconfig_library.py  cc_binary.py  cc_defaults.py  cc_library.py  cc_library_headers.py  cc_modules.py  cc_object.py  cc_test.py  cc_test_library.py  defaults.py  droiddoc_exported_dir.py  droidstubs.py  filegroup.py  genrule.py  gensrcs.py  hidl.py  java_aconfig_library.py  java_api_library.py  java_library.py  java_modules.py  java_sdk_library.py  java_system_modules.py  module.py  python_binary_host.py  soong_namespace.py  utils.py
baker/definitions/cc/: cc_binary.py  cc_library.py  cc_library_headers.py  cc_module.py  cc_object.py  cc_test.py  cc_test_library.py
cmake/: aconfig.cmake  aidl.cmake  aidl.template.sh  baker.cmake  cc.cmake  cc_object.cmake  defaults.cmake  dex.template.sh  dummy.c  genrule.cmake  genrule.sh  genrule.template.sh  hidl.cmake  jars_to_system_modules.sh  java.cmake  java_library.template.sh  java_system_modules.sh  metalava.template.sh  proto.cmake  protoc.sh  python_binary_host.template.sh  select.cmake  sources.cmake  turbine.template.sh  utils.cmake  zipmerge.py
cmake/language/bison/: CMakeBISONCompiler.cmake.in  CMakeBISONInformation.cmake  CMakeDetermineBISONCompiler.cmake
test/: CMakeLists.txt  manifest.xml  test.list.txt
test/mock-include/: elf.h  rustc_demangle.h  ucontext.h
test/mock-include/base/: strlcpy.h
test/mock-include/bits/: sigstksz.h
test/mock-include/linux/android/: binder.h
xxx/: pyvenv.cfg
